examples/test/testpolicy5725.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5725
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key6: value5
      key15: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value3
          key3: value24
          key15: value11
      podSelector:
        matchLabels:
          key44: value16
          key27: value3
          key5: value32
